# tsunami

./: .editorconfig  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  API_DOCUMENTATION.md  BLUEPRINT_MIGRATION.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMPLETE_API_INTEGRATION.md  CONTRIBUTING.md  DALGA_SIGINT_ARCHITECTURE.md  DEPENDENCY_SECURITY_REPORT.md  DEPLOYMENT_AND_DEBUGGING.md  Dockerfile  FRONTEND_AUDIT_REPORT.md  HARITA_SPECIFIC_FIXES.md  IMPLEMENTATION_RESEARCH.md  INDEX.md  LEGAL.md  LICENSE  NOTICE  OPEN_SOURCE_ENTEGRASYON_KILAVUZU.md  OTONOM_SIBER_v5_UPGRADE_BRIEF.md  PRODUCTION_SCORECARD.md  QUICK_FIXES.md  README.md  README_IMPLEMENTATION_GUIDE.md  REALTIME_API_REFERENCE.md  REALTIME_AUDIT_SUMMARY.txt  REALTIME_DATAFLOW.txt  REALTIME_FEATURES_AUDIT_REPORT.md  SECURITY.md  SUMMARY.txt  TSUNAMI_BRIF_YOL_HARITASI.md  UNIQUE_DIFFERENTIATION_RESEARCH.md  celery_worker.py  cybersecurity_agent_core.py  dalga.py  dalga_ailydian.py  (+52 more)
.github/: BRANCH_PROTECTION.md  CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml  security_audit.yml
.github/workflows/: canary.yml  cd.yml  ci.yml  codeql.yml  deploy.yml  performance.yml  rollback.yml  sbom.yml  scorecard.yml
AILYDIAN_CORE/: agents-metadata.json
blueprints/: __init__.py  api_status.py
config/: migration_plan.md  postgresql_config.py  production.py  prometheus.yml  redis_cluster_config.py
config/filebeat/: filebeat.yml
config/nginx/: nginx.conf
config/systemd/: tsunami-beat.service  tsunami-celery.service  tsunami-defender.service  tsunami-network-guardian.service  tsunami-notify.service  tsunami.service
dalga_sigint/: __init__.py  core.py  db.py
dalga_sigint/scanners/: __init__.py  bluetooth.py  (+3 more)
data/: turkiye_iller.geojson
docs/: BEYAZ_SAPKA_KURALLARI.md  GHOST_ENTEGRASYON_PLANI.md  KVKK_UYUM_REHBERI.md  RADVPN_ENTEGRASYON_PLANI.md
middleware/: __init__.py  error_handler.py  logging.py  security.py
migrations/: 001_initial_schema.sql
modules/: __init__.py  ai_threat_model.py  audit_trail.py  iot_monitor.py  live_threat_stream.py  soc_blueprints.py  v5_api_routes.py  video_stream_handler.py  video_stream_manager.py
routes/: __init__.py  api_v1.py  auth.py
scripts/: install_24x7.sh  install_dashboard.sh  migrate_sqlite_to_postgresql.py  network_guardian.py  rotate_api_keys.py  tsunami_defender.py  ubuntu_hardening.sh
static/: theme-switcher.js  theme-system.js  themes.css
templates/: araclar.html  beyin.html  dashboard.html  harita.html  komuta.html  login.html  osint.html  panel.html  pentest.html  raporlar.html  siber.html  spektrum.html  tarama.html  trafik.html  zafiyetler.html
tests/: __init__.py  conftest.py  pytest.ini  requirements-test.txt  test_alert_normalizer.py  test_api.py  test_api_endpoints.py  test_approval_workflow.py  test_authentication.py  test_auto_response.py  test_celery_worker.py  test_cortex_analyzer.py  test_dalga_hardening.py  test_dalga_logging.py  test_dalga_sinkhole.py  test_dalga_stealth.py  test_dalga_vault.py  test_database.py  test_ioc_enrichment.py  test_misp_connector.py  test_mitre_attack.py  test_nlp.py  test_osint.py  test_report_generator.py  test_security.py  test_security_comprehensive.py  test_sigint.py  test_sigma_engine.py  test_suricata_connector.py  test_thehive_connector.py  test_utils.py  test_validation.py
tsunam-react/: package-lock.json  package.json  vercel.json
utils/: __init__.py  async_utils.py  cache.py  logging_config.py  security.py
(+179 files in other folders)
