# TSUNAMI v5.0 - Project Configuration
# AILYDIAN AutoFix - Code Quality Enhancement

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tsunami"
version = "5.0.0"
description = "TSUNAMI - Advanced Cyber Intelligence Platform"
readme = "README.md"
license = {text = "Proprietary"}
requires-python = ">=3.10"
authors = [
    {name = "TSUNAMI Team"}
]
keywords = ["cybersecurity", "osint", "threat-intelligence", "sigint"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Flask",
    "Intended Audience :: Information Technology",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21",
    "black>=23.0",
    "isort>=5.12",
    "flake8>=6.0",
    "mypy>=1.0",
    "pre-commit>=3.0",
]
ml = [
    "torch>=2.0",
    "torch-geometric>=2.3",
    "scikit-learn>=1.3",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["modules*", "utils*", "dalga_sigint*"]

# ==================== BLACK ====================
[tool.black]
line-length = 120
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.venv
    | venv
    | osint_tools
    | __pycache__
    | \.eggs
    | build
    | dist
)/
'''

# ==================== ISORT ====================
[tool.isort]
profile = "black"
line_length = 120
skip = [".git", ".venv", "venv", "osint_tools", "__pycache__"]
known_first_party = ["dalga", "modules", "utils"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

# ==================== MYPY ====================
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = [
    "osint_tools/",
    "tests/",
    "venv/",
]

[[tool.mypy.overrides]]
module = "osint_tools.*"
ignore_errors = true

# ==================== PYTEST ====================
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers -x"
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
    "security: marks tests as security tests",
    "osint: marks tests as OSINT tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
asyncio_mode = "auto"

# ==================== COVERAGE ====================
[tool.coverage.run]
source = ["."]
omit = [
    "tests/*",
    "osint_tools/*",
    "venv/*",
    ".venv/*",
    "*/__pycache__/*",
]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
show_missing = true
fail_under = 80  # Production requirement: 80%+ coverage

# ==================== RUFF (Optional) ====================
[tool.ruff]
line-length = 120
target-version = "py311"
exclude = [
    ".git",
    ".venv",
    "venv",
    "osint_tools",
    "__pycache__",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "D", "UP", "B", "C4", "SIM"]
ignore = ["D100", "D101", "D102", "D103", "D104", "D105", "D107"]
